First fully edited commit

--- a/chapter_Classes.ipynb
+++ b/chapter_Classes.ipynb
@@ -1037,6 +1037,205 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "3INhW2QDPpA6",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Class Encapsulation\n",
+        "### A secret note-taker.\n",
+        "![alt text](https://www.howtogeek.com/wp-content/uploads/2017/09/IMG_7957.jpg)\n",
+        "\n",
+        "Here, we need to create a variable which is not publicly accessible outside the class. A such private variable is declared by adding a '__' in front of the desired variable name\n",
+        "\n",
+        "\n",
+        "example: use,\n",
+        "\n",
+        "```\n",
+        "self. __XYZ = 0\n",
+        "```\n",
+        "\n",
+        "instead of \n",
+        "\n",
+        "\n",
+        "\n",
+        "```\n",
+        "self.XYZ = 0\n",
+        "```\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uRMWflO6NlHq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class Notes:\n",
+        "  def __init__(self,name,password):\n",
+        "    self.Notebook_name = name\n",
+        "    self.open_notes = []\n",
+        "    self.__secret_notes = []\n",
+        "    self.__password = password\n",
+        "    \n",
+        "  def add_open_note(self,note):\n",
+        "    self.open_notes.append(note)\n",
+        "    \n",
+        "  def add_secret_note(self,note,password):\n",
+        "    if self.__password == password:\n",
+        "      self.__secret_notes.append(note)\n",
+        "    else:\n",
+        "      print(\"Wrong password. Note was not added\")\n",
+        "      \n",
+        "  def view_secret_note(self,password):\n",
+        "    if self.__password == password:\n",
+        "      print(self.__secret_notes)\n",
+        "    else:\n",
+        "      print(\"Wrong password. Note cannot be shown\")\n",
+        "    \n",
+        "    "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qrnO57ei8i6b",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "MyNote = Notes(\"JCC-Notebook\",\"ABC1729\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mX-Pm_XO8mXQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 168
+        },
+        "outputId": "932d6242-0180-48db-c25c-15426b9a102d"
+      },
+      "source": [
+        "print(MyNote.__password)"
+      ],
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-74-15e8b56e282d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMyNote\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__password\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Notes' object has no attribute '__password'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gbmha5wi9BYP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "MyNote.add_open_note(\"Python is the future!\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wg4AiBE19BbW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "05608bc6-1d03-4e5c-c316-b384192b99cc"
+      },
+      "source": [
+        "MyNote.add_secret_note(\"We need C, C++, Java, ... too\",1234)"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Wrong password. Note was not added\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ziCsXxNq9Be2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "MyNote.add_secret_note(\"We need C, C++, Java, ... too\",\"ABC1729\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Gjy1NHgW-KdP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "9cbdcbf1-95f4-462a-896a-2be09ee10eec"
+      },
+      "source": [
+        "MyNote.view_secret_note(\"ABC1729\")"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['We need C, C++, Java, ... too']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EVWmtHC6-oce",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Important note\n",
+        "In python, the encapsulation is not considered very important compared to other OOP concepts. But in many other widely used languages like C, C++, Java, Javascript, etc., the Encapsulation is frequently applied in practice.\n",
+        "\n",
+        "#### Wanna try some hacking?\n",
+        "Since Encapsulation is not considered as important in Python, it may not be very well implemented and supported. So can you try to hack it? Try if you can see the secret password stored in MyNote somehow. (hint: password is a *variable* inside the object)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "MN-83QrlGL2M",
         "colab_type": "text"
       },
@@ -1182,7 +1381,7 @@
         "colab": {}
       },
       "source": [
-        "car3 = Extras(\"EC1729\",\"Corolla\",375,105,True)"
+        "car3 = Extras(\"EC1729\",\"Ford F-150\",375,105,True)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1295,70 +1494,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3INhW2QDPpA6",
+        "id": "uWtApG_V_OUQ",
         "colab_type": "text"
       },
       "source": [
-        "# Class Encapsulation\n",
-        "### A secret note-taker.\n"
+        "Compare the variables amongst all the class objects."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uRMWflO6NlHq",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "class Notes:\n",
-        "  def __init__(self,name,password):\n",
-        "    self.Notebook_name = name\n",
-        "    self.open_notes = []\n",
-        "    self.__secret_notes = []\n",
-        "    self.__password = password\n",
-        "    \n",
-        "  def add_open_note(self,note):\n",
-        "    self.open_notes.append(note)\n",
-        "    \n",
-        "  def add_secret_note(self,note,password):\n",
-        "    if self.__password == password:\n",
-        "      self.__secret_notes.append(note)\n",
-        "      \n",
-        "  def view_secret_note(self,password):\n",
-        "    if self.__password == password:\n",
-        "      print(__secret_notes.append(note))\n",
-        "    \n",
-        "    "
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qIlDtwIjQUjR",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oTFqqQQQQVE-",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1368,7 +1509,8 @@
       },
       "source": [
         "# Nested Classes\n",
-        "\n"
+        "\n",
+        "Any datastructure can be put inside a class as a variable. So, as you might know already, a class object is datastructure too. Here, a class is created to represent a vheicle owner and another class is created to represnt a vehicle. While registering a vehicle at DMV, the owner's information is also taken in addition to the vehicle model information. It can be implemented as shown below."
       ]
     },
     {
@@ -1397,13 +1539,91 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B0eAiYloBsln",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "MyTruck = Vehicle(\"Truck\",\"JCC123\",\"Jane Doe\",\"abcd6789\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qTgaowHkCXMH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "7f13baca-44c2-48b4-abdb-6a9ab0e0a0aa"
+      },
+      "source": [
+        "vars(MyTruck)"
+      ],
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'category': 'Truck',\n",
+              " 'owner': <__main__.Person at 0x7f71d95e1fd0>,\n",
+              " 'registration': 'JCC123'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 81
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8t2KA8MdCaUL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "fd8dc929-fc9b-4a72-be4b-a53829ca17ad"
+      },
+      "source": [
+        "vars(MyTruck.owner)"
+      ],
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'license': 'abcd6789', 'owner': 'Jane Doe'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 82
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "9Jrerqw70AOQ",
         "colab_type": "text"
       },
       "source": [
+        "# Some General Notes\n",
+        "\n",
         "Wanna see where Classes are used?\n",
+        "\n",
         "Check this out: https://github.com/tensorflow/tensorflow/blob/master/tensorflow/python/training/adam.py\n",
         "\n",
         "Ever talked to your phone with \"OK Google\" or used one of the cool Snapchatfilters? \n",
@@ -1411,19 +1631,6 @@
         "\n",
         "Some of the biggest Artificial Intelligence machines in the world uses this class. But don't be afraid, you might be able to spot some familiar concepts in this script now: initializations, variables, methods, Inheritance, ...? "
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "POc6lR913K4r",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
